show more button in html update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
                 </div>
             </div>
 
-            
+            <!-- show More Button Section -->
+<div id="show-all" class="text-center">
+  <button id="btn-showAll" class="primary btn btn-danger mb-3">Show More</button>
+</div>
+</section>
     </main>
 
 
